# BifroSSH

./: .gitignore  LICENSE  README.md  bifrossh.flatpakrepo  bifrossh.gpg  index.html  install.sh  package-lock.json  package.json  summary  summary.idx  summary.idx.sig  summary.sig  vite.config.ts
flathub-submission/: io.github.aalmansadath.bifrossh.yml
flatpak/: .gitignore  build.sh  cargo-sources.json  com.bifrossh.app.desktop  com.bifrossh.app.metainfo.xml  com.bifrossh.app.yml  io.github.AalmanSadath.BifroSSH.desktop  io.github.AalmanSadath.BifroSSH.metainfo.xml  io.github.AalmanSadath.BifroSSH.yml  io.github.aalmansadath.bifrossh.desktop  io.github.aalmansadath.bifrossh.metainfo.xml  io.github.aalmansadath.bifrossh.yml  node-sources.json
flatpak/.repo/: summary  summary.idx
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  models.rs  ppk.rs  sftp.rs  ssh.rs  store.rs  tunnel.rs
src/components/: ColorPicker.tsx  (+14 more)
summaries/: 0174572ec0352e74669dadd74a12cf2b5dcc0512a19159cbd78b98bab752b9fa-b8654f5b7683fd678fbc0ab5c541f892cf4fea5407864492f91126ab7935a5ea.delta  069a1323ac4bed8eade59a8d8830a647d1985632add2103f94d13ad261477da3-0174572ec0352e74669dadd74a12cf2b5dcc0512a19159cbd78b98bab752b9fa.delta  069a1323ac4bed8eade59a8d8830a647d1985632add2103f94d13ad261477da3-69744bfdccf0e88e7b56fbfa544c213248783ddeace758dd0e4e54f309d64547.delta  069a1323ac4bed8eade59a8d8830a647d1985632add2103f94d13ad261477da3-7cf8ebf973c47b49671f27fab187459877bbb59040173939a096ecc9f0f58227.delta  (+36 more)
(+21 files in other folders)
