[package]
name = "bifrossh"
version = "0.1.0"
description = "GUI SSH client with built-in SFTP and keychain management"
authors = ["Aalman Sadath"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/AalmanSadath/BifroSSH"
edition = "2021"

[lib]
name = "bifrossh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.44"
russh-keys = "0.44"
russh-sftp = "2"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
async-trait = "0.1"
ssh-key = { version = "0.6", features = ["alloc", "ed25519", "p256", "rsa", "getrandom"] }
sha1 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
argon2 = "0.5"

[profile.dev]
opt-level = 1
codegen-units = 1

[patch.crates-io]
cookie = { path = "../patches/cookie-0.18.1" }
tauri-utils = { path = "../patches/tauri-utils-2.9.2" }
tauri = { path = "../patches/tauri-2.11.2" }
